--- a/app/assets/stylesheets/product/product-placing-page.scss
+++ b/app/assets/stylesheets/product/product-placing-page.scss
@@ -312,12 +312,12 @@
     }
   }
 }
-.footer {
+.p-footer {
   margin: 0 auto;
   width: 456px;
   height: 220px;
   padding: 40px 0;
-  .links {
+  .p-links {
     text-decoration: none;
     text-align: center;
     li {
