--- a/app/views/product/product-placing-page.html.haml
+++ b/app/views/product/product-placing-page.html.haml
@@ -123,8 +123,8 @@
             .sell-btn
               %button{type: "submit", class: "submit-button"} 出品する
             = link_to "もどる", "https://www.mercari.com/jp/", class: "back-btn"
-  .footer 
-    .links
+  .p-footer 
+    .p-links
       %ul
         %li.outer-links
           = link_to "プライバシーポリシー", "https://www.mercari.com/jp/privacy/"
