--- a/app/assets/stylesheets/user/_side-barMypage.scss
+++ b/app/assets/stylesheets/user/_side-barMypage.scss
@@ -1,20 +1,18 @@
-.body-side{
+.sidebar-body{
+  float: left;
+  padding-left: 40px;
   position: relative;
-    min-height: 100%;
-    background: #f5f5f5;
-    font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-    font-size: 14px;
-    color: #333;
-    line-height: 1;
-    width: 35%;
+  background: #f5f5f5;
+  font-size: 14px;
+  color: #333;
+  line-height: 1;
   .side-bar-box{
     position:relative;
     border-top: 1px solid #eee;
     width: 280px;
     margin: 0 40px 0 0;
     ul{
-      margin: 0;
-      padding: 0;
+      display: block;
       li{
         border-bottom:solid 1px #EEEEEE;
         position: relative;
@@ -25,7 +23,10 @@
         font-size: 14px;
         color: #333;
         line-height: 28px;
-        cursor: pointer;
+        .side-link-text{
+          text-decoration: none;
+          color: black;
+        }
       }
       li:hover{
         background-color: #f5f5f5f5;
@@ -41,7 +42,7 @@
       }
     }
   h3{
-    margin: 40px 0 0;
+    margin: 40px 0 8px;
     font-size: 16px;
     font-weight: 600;
   }
@@ -52,6 +53,11 @@
     position: absolute;
     left: 250px;
   }
-  
+  }
+}
+
+@media screen and (max-width:1100px){
+  .sidebar-body{
+  display: none;
   }
 }
