--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -153,6 +153,7 @@
                 display: flex;
                 font-size: smaller;
                 margin-right: 2px;
+                margin-left: 180px;
                 .link {
                   text-decoration: none;
                   color: #333;
