--- a/app/assets/stylesheets/devise/_pw-resetting.scss
+++ b/app/assets/stylesheets/devise/_pw-resetting.scss
@@ -103,6 +103,7 @@
                 display: flex;
                 font-size: smaller;
                 margin-right: 2px;
+                margin-left: 180px;
                 .link {
                   text-decoration: none;
                   color: #333;
