--- a/app/assets/stylesheets/devise/signup3.scss
+++ b/app/assets/stylesheets/devise/signup3.scss
@@ -22,6 +22,7 @@
         .push-box{
           form{
             padding: 20px 40px 64px;
+            text-align: left;
             .formbox{
               width: 343px;
               margin:0 auto;
