--- a/app/assets/stylesheets/devise/_header-signupBar.scss
+++ b/app/assets/stylesheets/devise/_header-signupBar.scss
@@ -34,61 +34,96 @@
               font-weight: bold;
             }
             li.marker{
+              position: relative;
+                z-index: 1000;
               .mark{
+                position: relative;
+                z-index: 1000;
                 background-color: #ea352d;
               }
-              .mark::after{
+            }
+            li.marker2{
+              .mark-line{
                 background-color: #ea352d;
               }
             }
             li{
-              padding: 0 52px 0 0;
               color:gray;
               font-size: 12px;
-
+              text-align: left;
+              .mark-name1{
+                display: inline;
+                position: relative;
+                right: 18px;
+              }
+              .mark-name2{
+                display: inline;
+                position: relative;
+                right: 30px;
+              }
+              .mark-name3{
+                display: inline;
+                position: relative;
+                right: 40px;
+              }
+              .mark-name4{
+                display: inline;
+                position: relative;
+                right: 24px;
+              }
+              .mark-name5{
+                display: inline;
+                position: relative;
+                right: 6px;
+              }
             }
             li.signupInfo{
-              .mark::after{
-                min-width: 120px;
+              .mark-line{
+                min-width: 115px;
               }
             }
             li.signupTell{
-              .mark::after{
-                min-width: 140px;
+              .mark-line{
+                min-width: 115px;
               }
             }
             li.signupAdd{
-              .mark::after{
-                min-width: 140px;
+              .mark-line{
+                min-width: 115px;
               }
             }
             li.signupHowToPay{
-              .mark::after{
-                min-width: 100px;
+              .mark-line{
+                min-width: 115px;
               }
             }
             li.signupComplete{
-              .mark::after{
+              .mark-line{
                 opacity: 0;
               }
             }
           }
-          
-          .mark{
-            width: 12px;
-            height: 12px;
-            margin: 8px auto 0;
-            background: #ccc;
-            border-radius: 50%;
-          }
-          .mark::after{
-            position: relative;
-            top:5px;
-            margin:3px 0 0 0 ;
-            display: block;
-            content: '';
-            height: 2px;
-            background: #ccc;
+          .marking{
+            display: flex;
+            .mark{
+              position: relative;
+              z-index: 2;
+              width: 12px;
+              height: 12px;
+              margin: 8px 0 0;
+              background: #ccc;
+              border-radius: 50%;
+            }
+            .mark-line{
+              position: relative;
+              top:5px;
+              margin:8px 0 0 0 ;
+              display: block;
+              content: '';
+              height: 2px;
+              background: #ccc;
+              z-index: 1;
+            }
           }
         } 
       }
