--- a/app/assets/stylesheets/devise/signup2.scss
+++ b/app/assets/stylesheets/devise/signup2.scss
@@ -18,6 +18,7 @@
       form{
         padding: 40px 40px 64px;
         height: 1211px;
+        text-align: left;
         .formbox{
           width: 343px;
           margin:0 auto;
@@ -78,7 +79,7 @@
               text-align: center;
             }
             .link-for-user{
-              color:skyblue;
+              color: #00a2ff;
               text-decoration:none;
             }
           }
