--- a/app/assets/stylesheets/devise/signup5.scss
+++ b/app/assets/stylesheets/devise/signup5.scss
@@ -23,6 +23,7 @@
         .push-box{
           form{
             padding: 20px 40px 64px;
+            text-align: left;
             .formbox{
               width: 343px;
               margin:0 auto;
