--- a/app/assets/stylesheets/devise/signup6.scss
+++ b/app/assets/stylesheets/devise/signup6.scss
@@ -22,6 +22,7 @@
         
           form{
             padding: 20px 40px 64px;
+            text-align: left;
             p{
               text-align: center;
               font-size: 22px;
