--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -1,4 +1,6 @@
 /headerは、js導入時に追加するクラス名と場所をわかりやすくするために現時点では部分テンプレートにしていません。
+/profile.scssのbody{text-align:center;}が影響してしまい、文字が中央揃えになってしまっています。
+/product-details.scssのpadding:40pxがheaderを崩しています。
 .body
   .signup-header
     .signup-header__box
@@ -8,21 +10,35 @@
       %nav.signupBar
         %ol.signupList
           %li.signupInfo.marker.now-point
-          
-            会員情報
-            .mark
+            .mark-name1
+              会員情報
+            .marking
+              .mark
+              .mark-line
           %li.signupTell
-            電話番号認証
-            .mark
+            .mark-name2
+              電話番号認証
+            .marking
+              .mark
+              .mark-line
           %li.signupAdd
-            お届け先住所入力
-            .mark
+            .mark-name3
+              お届け先住所入力
+            .marking
+              .mark
+              .mark-line
           %li.signupHowToPay
-            支払い方法
-            .mark
+            .mark-name4
+              支払い方法
+            .marking
+              .mark
+              .mark-line
           %li.signupComplete
-            完了
-            .mark
+            .mark-name5
+              完了
+            .marking
+              .mark
+              .mark-line
   .push-info
     .info-top
       %h2
@@ -74,11 +90,11 @@
             %input.kana2ndName-info{placeholder: "例) アヤ", value: ""}
         .form-group
           %label.birthday-new
-            お名前(全角) 
+            生年月日 
           %span.must-content
             必須
           .select-parrent
-            //=render "option-birthYear"
+            =render "deviseGo/option-birthYear"
           %p.must-text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
         .robot
           私はロボットではありません
@@ -92,4 +108,4 @@
         =link_to "", class: "link-for-user-info" do
           本人情報の登録について
           =fa_icon'chevron-right'
-  //=render "footer-login"
+  =render "deviseGo/footer-login"
