--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -6,21 +6,36 @@
           =image_tag 'SVG/fmarket_logo_red.svg'
       %nav.signupBar
         %ol.signupList
-          %li.signupInfo.marker
-            会員情報
-            .mark
-          %li.signupTell.marker
-            電話番号認証
-            .mark
-          %li.signupAdd.marker
-            お届け先住所入力
-            .mark
+          %li.signupInfo.marker.marker2
+            .mark-name1
+              会員情報
+            .marking
+              .mark
+              .mark-line
+          %li.signupTell.marker.marker2
+            .mark-name2
+              電話番号認証
+            .marking
+              .mark
+              .mark-line
+          %li.signupAdd.marker.marker2
+            .mark-name3
+              お届け先住所入力
+            .marking
+              .mark
+              .mark-line
           %li.signupHowToPay.marker.now-point
-            支払い方法
-            .mark
+            .mark-name4
+              支払い方法
+            .marking
+              .mark
+              .mark-line
           %li.signupComplete
-            完了
-            .mark
+            .mark-name5
+              完了
+            .marking
+              .mark
+              .mark-line
   .credit-box
     .credit-box__title
       %h2 支払い方法
@@ -44,7 +59,7 @@
               %span.must-content
                 必須
               .select-parrent
-                //=render "option-birthMonth"
+                =render "deviseGo/option-birthMonth"
             .form-group-credit
               %label.municipality-new
                 セキュリティコード
@@ -56,4 +71,4 @@
             =link_to "", class: "link-for-user-info" do
               カード裏面の番号とは？
               =fa_icon'chevron-right'
-  //=render "footer-login"
+  =render "deviseGo/footer-login"
