--- a/app/views/pay-confirm/_paypay.html.haml
+++ b/app/views/pay-confirm/_paypay.html.haml
@@ -35,8 +35,9 @@
         %section.pay-user-info
           .pay-content-info
             %h3 お届け先
-            %address.user-info-text 〒533-0041 愛知県 名古屋市 栄
-            %br
+            %address.user-info-text
+              %br 〒533-0041
+              愛知県 名古屋市 栄
             %p.user-info-text
             = link_to "変更する >", "", class: "user-info-fix"
             .dammy
