--- a/app/views/pay-confirm/_paypay.html.haml
+++ b/app/views/pay-confirm/_paypay.html.haml
@@ -30,6 +30,7 @@
                   .breakdown お買い上げ金額
                   .breakdown
                     %span{"value":"15000"} ¥15,000
+              %button.pay-btn{disabled: "", type: "submit"} 購入する
               %input{name: "seller_id", type: "hidden", value: "722674558"}/
 
         %section.pay-user-info
