--- a/app/assets/stylesheets/pay-confirm/_paypay.scss
+++ b/app/assets/stylesheets/pay-confirm/_paypay.scss
@@ -113,6 +113,19 @@
                 }
               }
             }
+            button.pay-btn {
+              border: 1px solid #888;
+              background: #888;
+              color: #fff;
+              margin: 8px 0 0;
+              display: block;
+              width: 100%;
+              line-height: 48px;
+              font-size: 14px;
+              transition: all ease-out .3s;
+              cursor: pointer;
+              text-align: center;
+            }
           }
         }
       }
