user_info 枠線の色修正

--- a/app/assets/stylesheets/user/user_info_register.scss
+++ b/app/assets/stylesheets/user/user_info_register.scss
@@ -62,13 +62,13 @@
                 width: 76px;
                 background-color: #fff;
                 font-weight: none;
+                border: 1px solid #ccc;
               }
       span{
         margin: 0 2px;
         left: 100px;
       }
       .info_link{
-
         color: #0099e8;
         text-decoration: none;
         }
