--- a/app/assets/stylesheets/devise/_login-header.scss
+++ b/app/assets/stylesheets/devise/_login-header.scss
@@ -45,8 +45,7 @@ header.top-content {
           font-size: 16px;
           height: 40px;
           width: 100%;
-          border-width: 1px;
-          border-style: solid;
+          border: 1px solid #ccc;
           border-image: initial;
           border-radius: 4px;
           padding: 0px 50px 0px 10px;
