--- a/app/assets/stylesheets/top/header.scss
+++ b/app/assets/stylesheets/top/header.scss
@@ -42,9 +42,7 @@ header.top-content {
           font-size: 16px;
           height: 40px;
           width: 100%;
-          border-width: 1px;
-          border-style: solid;
-          border-image: initial;
+          border: 1px solid #ccc;
           border-radius: 4px;
           padding: 0px 50px 0px 10px;
           transition: all 0.3s ease-out 0s;
@@ -145,7 +143,7 @@ header.top-content {
               text-align: center;
               background-color: rgb(234, 53, 45);
               color: rgb(255, 255, 255);
-              display: block;
+              vertical-align: -webkit-baseline-middle;
               font-size: 14px;
               border-width: 1px;
               border-style: solid;
@@ -157,7 +155,7 @@ header.top-content {
             a.login-acount {
               background-color: rgb(255, 255, 255);
               color: rgb(0, 149, 238);
-              display: block;
+              vertical-align: -webkit-baseline-middle;
               font-size: 14px;
               border-width: 1px;
               border-style: solid;
