--- a/app/assets/stylesheets/top/header.scss
+++ b/app/assets/stylesheets/top/header.scss
@@ -132,6 +132,7 @@ header.top-content {
         display: flex;
         ul.user-nav {
           list-style: none;
+          margin-top: 5px;
           a {
             touch-action: manipulation;
             text-decoration: none;
