ユーザーマイページビュー修正

--- a/app/views/mypage/mypage.html.haml
+++ b/app/views/mypage/mypage.html.haml
@@ -1,3 +1,5 @@
+= render "layouts/header"
+
 .bodyMypage.clearfix
   .main
     .user
@@ -64,4 +66,6 @@
           %li
             取引中の商品がありません
 
-  = render "side-barMypage"
+  = render "layouts/side-barMypage"
+
+= render "layouts/footer"
