--- a/app/assets/stylesheets/devise/signup1.scss
+++ b/app/assets/stylesheets/devise/signup1.scss
@@ -124,15 +124,13 @@
     }
   }
   ul{
-    display: flex;
+    // display: flex;
     min-width: 100%;
-    li{
-      text-align: center;
-    }
   }
   li.text{
     position: relative;
     right:10px;
+    text-align: center;
   }
 }
 
@@ -262,15 +260,13 @@
     }
   }
   ul{
-    display: flex;
+    // display: flex;
     min-width: 100%;
-    li{
-      text-align: center;
-    }
   }
   li.text{
     position: relative;
     right:10px;
+    text-align: center;
   }
 }
   
