--- a/app/assets/stylesheets/top/footer.scss
+++ b/app/assets/stylesheets/top/footer.scss
@@ -74,7 +74,7 @@
     padding: 0 20px 10px;
     background-color: rgb(33, 33, 33);
     color: #fff;
-    height: 389px;
+    height: auto;
     &__content {
       margin: 0 190px;
       display: flex;
