--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -48,15 +48,15 @@
                 %li.footer-text__box--left
                   .text
                     %p.text-left
-                      =link_to 'プライバシーポリシー', ''
+                      =link_to 'プライバシーポリシー', '', class: "footer-link"
                 %li.footer-text__box--center
                   .text
                     %p.text-center
-                      =link_to 'メルカリ利用規約', ''
+                      =link_to 'メルカリ利用規約', '', class: "footer-link"
                 %li.footer-text__box--right
                   .text
                     %p.text-right
-                      =link_to '特定商取引に関する表記', ''
+                      =link_to '特定商取引に関する表記', '', class: "footer-link"
           .logo-box
             .footer-logo
               =link_to '' do
