--- a/app/assets/stylesheets/devise/_header_footer.scss
+++ b/app/assets/stylesheets/devise/_header_footer.scss
@@ -35,12 +35,12 @@
             &__box{
               width: 380px;
               margin:0 auto;
-              a:-webkit-any-link{
+              a.footer-link:-webkit-any-link{
                 text-decoration: none;
                 color: black;
                 opacity: 0.7;
               }
-              a:hover{
+              a.footer-link:hover{
                 color: #aaaaaa;
                 border-bottom:solid 1px #aaaaaa;
               }
@@ -108,6 +108,7 @@
       .footer{
         font-size:12px;
         height: 170px;
+        width: 100%;
         align-items: center; 
         justify-content: center;
         position: relative;
@@ -116,12 +117,12 @@
           .footer-text{
             text-align: center;
             &__box{
-              a:-webkit-any-link{
+              a.footer-link:-webkit-any-link{
                 text-decoration: none;
                 color: black;
                 opacity: 0.7;
               }
-              a:hover{
+              a.footer-link:hover{
                 color: #aaaaaa;
                 border-bottom:solid 1px #aaaaaa;
               }
