--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -192,6 +192,7 @@
       .footer{
         font-size:12px;
         height: 170px;
+        width: 100%;
         align-items: center;
         justify-content: center;
         position: relative;
