--- a/app/views/deviseGo/_footer-login.html.haml
+++ b/app/views/deviseGo/_footer-login.html.haml
@@ -1,25 +1,25 @@
 .body
-  
-  .footer
-    .text-box
-      .text-zone
-        .footer-text
-          %ul.footer-text__box
-            %li.footer-text__box--left
-              .text
-                %p.text-left
-                  =link_to 'プライバシーポリシー', ''
-            %li.footer-text__box--center
-              .text
-                %p.text-center
-                  =link_to 'メルカリ利用規約', '' 
-            %li.footer-text__box--right
-              .text
-                %p.text-right
-                  =link_to '特定商取引に関する表記', '' 
-        .logo-box
-          .footer-logo
-            =link_to '' do
-              =image_tag 'logo_gray.svg'
-        .logo-content
-          © 2019 Mercari
+  .body-foot
+    .footer
+      .text-box
+        .text-zone
+          .footer-text
+            %ul.footer-text__box
+              %li.footer-text__box--left
+                .text
+                  %p.text-left
+                    =link_to 'プライバシーポリシー', '', class: "footer-link"
+              %li.footer-text__box--center
+                .text
+                  %p.text-center
+                    =link_to 'メルカリ利用規約', '', class: "footer-link"
+              %li.footer-text__box--right
+                .text
+                  %p.text-right
+                    =link_to '特定商取引に関する表記', '', class: "footer-link"
+          .logo-box
+            .footer-logo
+              =link_to '' do
+                =image_tag 'SVG/logo_gray.svg'
+          .logo-content
+            © 2019 Mercari
