--- a/app/views/deviseGo/_header-login.html.haml
+++ b/app/views/deviseGo/_header-login.html.haml
@@ -1,5 +1,5 @@
-.body
+.content-all
   .header
     .header__logo
       =link_to '' do
-        =image_tag 'fmarket_logo_red.svg'
+        =image_tag 'SVG/fmarket_logo_red.svg'
