--- a/app/assets/stylesheets/devise/_header_footer.scss
+++ b/app/assets/stylesheets/devise/_header_footer.scss
@@ -1,78 +1,76 @@
 @media screen and (min-width: 768px){
-  .body{
-    @include bodyTemp();
-    .header{
-      height: 130px;
-      .header-logo{
-        margin: 0 auto;
-        width:182px;
-        padding: 40px 0 0;
-        cursor: pointer;
-        margin: 0 auto;
-      }
-      .header-logo:hover{
-        opacity: 0.7;
-      }
+  @include bodyTemp();
+  .header{
+    height: 130px;
+    &__logo{
+      margin: 0 auto;
+      width:182px;
+      padding: 40px 0 0;
+      cursor: pointer;
+      margin: 0 auto;
     }
-    .body-foot{
-      margin:0 auto;
-      width: 700px;
-      max-width: 50%;
-      height: 140px;
-      padding: 40px 0;
+    .header-logo:hover{
+      opacity: 0.7;
+    }
+  }
+  .body-foot{
+    margin:0 auto;
+    width: 700px;
+    max-width: 50%;
+    height: 140px;
+    padding: 40px 0;
+    position: relative;
+    .footer{
+      font-size:12px;
+      height: 170px;
+      align-items: center;
+      justify-content: center;
       position: relative;
-      .footer{
-        font-size:12px;
+      .text-box{
         height: 170px;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        .text-box{
-          height: 170px;
-          .footer-text{
-            position: relative;
-            bottom: 40px;
-            &__box{
-              width: 380px;
-              margin:0 auto;
-              a.footer-link:-webkit-any-link{
-                text-decoration: none;
-                color: black;
-                opacity: 0.7;
-              }
-              a.footer-link:hover{
-                color: #aaaaaa;
-                border-bottom:solid 1px #aaaaaa;
-              }
-              .text-in{
-                display:flex;
-                margin: 0 auto;
-                .text{
-                  padding: 40px 5px;
-                }
-              }  
-            }
-          }
-          .logo-box{
-            position: relative;
-            bottom: 40px;
-            .footer-logo{
-              margin: 0 auto;
-              max-width: 50%;
-              width: 80px;
-              cursor: pointer;
-              position: relative;
-            }
-            .footer-logo:hover{
+        .footer-text{
+          position: relative;
+          bottom: 40px;
+          &__box{
+            width: 380px;
+            margin:0 auto;
+            a.footer-link:-webkit-any-link{
+              text-decoration: none;
+              color: black;
               opacity: 0.7;
             }
+            a.footer-link:hover{
+              color: #aaaaaa;
+              border-bottom:solid 1px #aaaaaa;
+            }
+            .text-in{
+              display:flex;
+              margin: 0 auto;
+              .text{
+                padding: 40px 5px;
+              }
+            }  
           }
-          .logo-content{
-            text-align: center;
+        }
+        .logo-box{
+          position: relative;
+          bottom: 40px;
+          .footer-logo{
             margin: 0 auto;
+            max-width: 50%;
+            width: 80px;
+            cursor: pointer;
             position: relative;
-            bottom: 40px;
           }
+          .footer-logo:hover{
+            opacity: 0.7;
+          }
+        }
+        .logo-content{
+          text-align: center;
+          margin: 0 auto;
+          position: relative;
+          bottom: 40px;
         }
       }
     }
@@ -81,78 +79,76 @@
 
 
 @media screen and (max-width: 768px){
-  .body{
-    @include bodyTemp();
-    .header{
-      height: 56px;
-      .header-logo{
-        margin: 0 auto;
-        width:120px;
-        height: 33px;
-        cursor: pointer;
-        margin: 0 auto;
-        position: relative;
-        top:11.5px;
-      }
-      .header-logo:hover{
-        opacity: 0.7;
-      }
-    }
-    .body-foot{
-      margin:0 auto;
-      width: 700px;
-      max-width: 50%;
-      height: 170px;
-      padding: 40px 0;
+  @include bodyTemp();
+  .header{
+    height: 56px;
+    &__logo{
+      margin: 0 auto;
+      width:120px;
+      height: 33px;
+      cursor: pointer;
+      margin: 0 auto;
       position: relative;
-      .footer{
-        font-size:12px;
+      top:11.5px;
+    }
+    .header-logo:hover{
+      opacity: 0.7;
+    }
+  }
+  .body-foot{
+    margin:0 auto;
+    width: 700px;
+    max-width: 50%;
+    height: 170px;
+    padding: 40px 0;
+    position: relative;
+    .footer{
+      font-size:12px;
+      height: 170px;
+      width: 100%;
+      align-items: center; 
+      justify-content: center;
+      position: relative;
+      .text-box{
         height: 170px;
-        width: 100%;
-        align-items: center; 
-        justify-content: center;
-        position: relative;
-        .text-box{
-          height: 170px;
-          .footer-text{
-            text-align: center;
-            &__box{
-              a.footer-link:-webkit-any-link{
-                text-decoration: none;
-                color: black;
-                opacity: 0.7;
-              }
-              a.footer-link:hover{
-                color: #aaaaaa;
-                border-bottom:solid 1px #aaaaaa;
-              }
-              .text-in{
-                margin: 0 auto;
-                .text{
-                  margin: 16px 5px 0;
-                }
-              }  
-            }
-          }
-        
-          .logo-box{
-            position: relative;
-            .footer-logo{
-              margin: 40px auto 0;
-              max-width: 50%;
-              width: 80px;
-              cursor: pointer;
-              position: relative;
-            }
-            .footer-logo:hover{
+        .footer-text{
+          text-align: center;
+          &__box{
+            a.footer-link:-webkit-any-link{
+              text-decoration: none;
+              color: black;
               opacity: 0.7;
             }
+            a.footer-link:hover{
+              color: #aaaaaa;
+              border-bottom:solid 1px #aaaaaa;
+            }
+            .text-in{
+              margin: 0 auto;
+              .text{
+                margin: 16px 5px 0;
+              }
+            }  
           }
-          .logo-content{
-            text-align: center;
-            margin: 0 auto;
+        }
+      
+        .logo-box{
+          position: relative;
+          .footer-logo{
+            margin: 40px auto 0;
+            max-width: 50%;
+            width: 80px;
+            cursor: pointer;
             position: relative;
           }
+          .footer-logo:hover{
+            opacity: 0.7;
+          }
+        }
+        .logo-content{
+          text-align: center;
+          margin: 0 auto;
+          position: relative;
         }
       }
     }
