--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -21,7 +21,7 @@
 -# = render "devise/shared/links"
 
 .z
-  //=render 'header-login'
+  = render "devise/shared/header-login"
   .main
     .main-box
       
@@ -46,4 +46,4 @@
                 =fa_icon 'google'
                 %li.text
                   Googleで登録する
-  //=render 'footer-login'
+  = render "devise/shared/footer-login"
