--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 %header.top-content
   .top-main
     .top-main-face
-      = link_to image_tag("SVG/fmarket_logo_red.svg", alt: "", class: "top-main-face__logo"),"https://www.mercari.com/jp/"
+      = link_to image_tag("SVG/fmarket_logo_red.svg", alt: "", class: "top-main-face__logo"), "/mypage/profile"
       %form.searchbox
         %input.texts{type: "search", name: "keyword", placeholder: "Do you look for anything?", value: ""}
         %button.glass
@@ -27,8 +27,6 @@
       .top-main-leg__right
         %ul.user-nav
           %li
-            -# = link_to "新規会員登録", new_user_registration_path, class: "new-acount"
-            = link_to "新規会員登録", "#", class: "new-acount"
+            = link_to "新規会員登録", new_user_registration_path, class: "new-acount"
           %li
-            -# = link_to "ログイン",  new_user_session_path, class: "login-acount"
-            = link_to "ログイン", "#", class: "login-acount"
+            = link_to "ログイン",  new_user_session_path, class: "login-acount"
