--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -108,4 +108,4 @@
         =link_to "", class: "link-for-user-info" do
           本人情報の登録について
           =fa_icon'chevron-right'
-  =render "deviseGo/footer-login"
+  =render "devise/shared/footer-login"
