--- a/app/views/signup/signup4.html.haml
+++ b/app/views/signup/signup4.html.haml
@@ -98,4 +98,4 @@
               %input.tellNum-info{placeholder: "09012345678", value: ""}/
             =link_to signup5_signup_index_path do
               =f.button "次へ進む", class: "go-ahead4"
-  =render "deviseGo/footer-login"
+  =render "devise/shared/footer-login"
