--- a/app/views/signup/signup6.html.haml
+++ b/app/views/signup/signup6.html.haml
@@ -47,4 +47,4 @@
           =link_to root_path do
             =f.button "メルカリをはじめる", class: "go-ahead"
       =image_tag "background/tech.jpg", class: "tech-image"
-  =render "deviseGo/footer-login"
+  =render "devise/shared/footer-login"
