--- a/app/views/layouts/signup1.html.haml
+++ b/app/views/layouts/signup1.html.haml
@@ -1,5 +1,5 @@
 .z
-  =render'header-login'
+  =render'devise/shared/header-login'
   .main
     .main-box
       
@@ -24,4 +24,4 @@
                 =fa_icon 'google'
                 %li.text
                   Googleで登録する
-  =render'footer-login'
+  =render'devise/shared/footer-login'
