--- a/app/views/signup/signup3.html.haml
+++ b/app/views/signup/signup3.html.haml
@@ -54,4 +54,4 @@
             =link_to "", class: "link-for-user-info" do
               電話番号の確認が必要な理由
               =fa_icon'chevron-right'
-  =render "deviseGo/footer-login"
+  =render "devise/shared/footer-login"
