--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -71,4 +71,4 @@
             =link_to "", class: "link-for-user-info" do
               カード裏面の番号とは？
               =fa_icon'chevron-right'
-  =render "deviseGo/footer-login"
+  =render "devise/shared/footer-login"
