view修正（プロフィール、本人情報）

--- a/app/assets/stylesheets/user/profile.scss
+++ b/app/assets/stylesheets/user/profile.scss
@@ -1,5 +1,6 @@
 .profile-main{
-  margin: 40px 0 40px 0;
+  background: #f5f5f5;
+  padding-top: 40px;
   width: 100%;
   .both-content{
     display:inline-block;
