--- a/app/assets/stylesheets/user/user_info_register.scss
+++ b/app/assets/stylesheets/user/user_info_register.scss
@@ -1,6 +1,7 @@
 .user_info_register{
-  margin: 40px 0 40px 0;
+  padding-top: 40px;
   width: 100%;
+  background: #f5f5f5;
   .both-content{
     display:inline-block;
     position: relative;
