--- a/app/views/layouts/_side-barMypage.html.haml
+++ b/app/views/layouts/_side-barMypage.html.haml
@@ -97,6 +97,6 @@
         .icon
           =fa_icon'chevron-right'
       %li
-        = link_to 'ログアウト', mypage_user_info_register_path, class: "side-link-text"
+        = link_to 'ログアウト', sessions_logout_path, class: "side-link-text"
         .icon
           =fa_icon'chevron-right'
