本人情報リンクcut

--- a/app/views/mypage/user_info_register.haml
+++ b/app/views/mypage/user_info_register.haml
@@ -11,7 +11,7 @@
             %br>/
             登録されたお名前・生年月日を変更する場合、本人確認書類の提出が必要になります。
           %p.text-right
-            =link_to "本人確認書類のアップロードについて", "/help_center/article/",{class: "link"}
+            =link_to "本人確認書類のアップロードについて", root_path,{class: "link"}
             %i.icon-arrow-right
         .form-group
           %label.name お名前
