view修正&ロボット追加

--- a/app/assets/stylesheets/devise/_header-signupBar.scss
+++ b/app/assets/stylesheets/devise/_header-signupBar.scss
@@ -4,6 +4,7 @@
     .signup-header{
       height: 130px;
       display: flex;
+      background:#f5f5f5;
       &__box{
         width: 768px;
         display: flex;
