--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -96,8 +96,16 @@
           .select-parrent
             =render "deviseGo/option-birthYear"
           %p.must-text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
-        .robot
-          私はロボットではありません
+        .form-robot
+          %button.recaptcha
+            .left-side
+              %input.robot-check{name: "robot", type: "checkbox"}
+              %h2.im-not-a-robot 私はロボットではありません
+            .right-side
+              %svg.svg-inline--fa.fa-robot.fa-w-20{"aria-hidden" => "true", "data-icon" => "robot", "data-prefix" => "fas", focusable: "false", role: "img", viewbox: "0 0 640 512", xmlns: "http://www.w3.org/2000/svg", class: "robot-logo"}
+                %path{d: "M0 256v128c0 17.7 14.3 32 32 32h32V224H32c-17.7 0-32 14.3-32 32zM464 96H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H176c-44.2 0-80 35.8-80 80v272c0 35.3 28.7 64 64 64h320c35.3 0 64-28.7 64-64V176c0-44.2-35.8-80-80-80zM256 416h-64v-32h64v32zm-32-120c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm128 120h-64v-32h64v32zm96 0h-64v-32h64v32zm-32-120c-22.1 0-40-17.9-40-40s17.9-40 40-40 40 17.9 40 40-17.9 40-40 40zm192-72h-32v192h32c17.7 0 32-14.3 32-32V256c0-17.7-14.3-32-32-32z", fill: "currentColor"}
+                %p.logo-name reCAPTCHA
+                %ul.links
         .form-group
           .center-contents
             「次へ進む」のボタンを押すことにより、
