--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 %header.top-content
   .top-main
     .top-main-face
-      = link_to image_tag("SVG/fmarket_logo_red.svg", alt: "", class: "top-main-face__logo"), "/mypage/profile"
+      = link_to image_tag("SVG/fmarket_logo_red.svg", alt: "", class: "top-main-face__logo"), root_path
       %form.searchbox
         %input.texts{type: "search", name: "keyword", placeholder: "Do you look for anything?", value: ""}
         %button.glass
