フッタースクロール＆余白直し

--- a/app/assets/stylesheets/devise/_pw-resetting.scss
+++ b/app/assets/stylesheets/devise/_pw-resetting.scss
@@ -126,7 +126,7 @@
   }
   .body-foot{
     margin:0 auto;
-    height: 140px;
+    //height: 140px;
     padding: 40px 0;
     position: relative;
     .footer{
