--- a/app/assets/stylesheets/devise/_header_footer.scss
+++ b/app/assets/stylesheets/devise/_header_footer.scss
@@ -17,7 +17,7 @@
     margin:0 auto;
     width: 700px;
     max-width: 50%;
-    height: 140px;
+    //height: 140px;
     padding: 40px 0;
     position: relative;
     background:#f5f5f5;
