--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -4,7 +4,7 @@
     font-size: 14px;
     color: #333;
     line-height: 1;
-    overflow: scroll;
+    //overflow: scroll;
     width: 100%;
     height: 100%;
     .header{
@@ -186,7 +186,7 @@
     }
     .body-foot{
       margin:0 auto;
-      height: 140px;
+      //height: 140px;
       padding: 40px 0;
       position: relative;
       .footer{
