--- a/app/views/layouts/_side-barMypage.html.haml
+++ b/app/views/layouts/_side-barMypage.html.haml
@@ -60,7 +60,7 @@
           =fa_icon'chevron-right'
     %h3
       メルペイ
-    %ul.merpay-list
+    %ul.sidebar-list-1
       %li.side-bar-links
         = link_to '売上・振込申請', mypage_profile_path, class: "side-link-text"
         .icon
@@ -71,7 +71,7 @@
           =fa_icon'chevron-right'
     %h3
       設定
-    %ul.information-list
+    %ul.sidebar-list-1
       %li.side-bar-links
         = link_to 'プロフィール', mypage_profile_path, class: "side-link-text"
         .icon
