--- a/app/assets/stylesheets/user/profile.scss
+++ b/app/assets/stylesheets/user/profile.scss
@@ -1,6 +1,7 @@
 .profile-main{
   background: #f5f5f5;
   padding-top: 40px;
+  padding-bottom: 20px;
   width: 100%;
   text-align: center;
   .both-content{
