--- a/app/assets/stylesheets/user/user_info_register.scss
+++ b/app/assets/stylesheets/user/user_info_register.scss
@@ -1,5 +1,6 @@
 .user_info_register{
   padding-top: 40px;
+  padding-bottom: 20px;
   width: 100%;
   background: #f5f5f5;
   text-align: center;
@@ -18,6 +19,7 @@
         border-bottom: 1px solid #f5f5f5;
       }
       .single-inner{
+        text-align: left;
         padding: 64px;
         .info_content{
           margin: 8px 0 0;
