--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -5,7 +5,7 @@
   .signup-header
     .signup-header__box
       .signup-header-logo
-        =link_to '' do
+        =link_to root_path do
           =image_tag 'SVG/fmarket_logo_red.svg'
       %nav.signupBar
         %ol.signupList
@@ -109,11 +109,11 @@
         .form-group
           .center-contents
             「次へ進む」のボタンを押すことにより、
-            =link_to "利用規約", "", class: "link-for-user"
+            =link_to "利用規約", "https://www.mercari.com/jp/tos_list/", class: "link-for-user"
             に同意したものとみなします
         =link_to signup3_signup_index_path do
           =f.button "次へ進む", class: "go-ahead"
-        =link_to "", class: "link-for-user-info" do
+        =link_to "https://www.mercari.com/jp/help_center/article/423/", class: "link-for-user-info" do
           本人情報の登録について
           =fa_icon'chevron-right'
   =render "devise/shared/footer-login"
