--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -2,7 +2,7 @@
   .signup-header
     .signup-header__box
       .signup-header-logo
-        =link_to '' do
+        =link_to root_path do
           =image_tag 'SVG/fmarket_logo_red.svg'
       %nav.signupBar
         %ol.signupList
