--- a/app/views/mypage/user_page.html.haml
+++ b/app/views/mypage/user_page.html.haml
@@ -11,10 +11,10 @@
             =image_tag "/ramen.jpg"
           %h2.nickname SRB
           .records
-            %div.value
+            .value
               評価
               %span.number 0
-            %div.value
+            .value
               出品数
               %span.number 0
 
