--- a/app/views/pay-confirm/_paypay.html.haml
+++ b/app/views/pay-confirm/_paypay.html.haml
@@ -54,10 +54,10 @@
     %nav
       %ul.script
         %li.manner
-          = link_to "プライバシーポリシー", root_path, class: "manual"
+          = link_to "プライバシーポリシー", "https://www.mercari.com/jp/privacy/", class: "manual"
         %li.manner
-          = link_to "メルカリ利用規約", root_path, class: "manual"
+          = link_to "メルカリ利用規約", "https://www.mercari.com/jp/tos/", class: "manual"
         %li.manner
-          = link_to "特定商取引に関する表記", root_path, class: "manual"
+          = link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/", class: "manual"
     = link_to image_tag("SVG/fmarket_logo_red.svg", target: "_blank", alt: "mercari", class: "footer-logo"),root_path
     %p.copyright ©︎ ⅡOⅠⅨ Mercari
