商品出品用ボタン追加

--- a/app/assets/stylesheets/module/red-btn.scss
+++ b/app/assets/stylesheets/module/red-btn.scss
@@ -6,8 +6,10 @@
   text-align: center;
   border-radius: 50%;
   float: right;
-  right: 20px;
-  bottom: 20px;
+  bottom: 25px;
+  right: 25px;
+  position: -webkit-sticky;
+  position: sticky;
   h1 {
     font-size: 22px;
     color: rgb(255, 255, 255);
