--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -222,6 +222,7 @@
                   .contents-item__index--name 
                     %span テスト
 = render 'layouts/footer'
+= render "devise/shared/red-btn"
 
 
 
