--- a/app/assets/stylesheets/devise/_logout.scss
+++ b/app/assets/stylesheets/devise/_logout.scss
@@ -1,19 +1,27 @@
-.content {
-  margin: 40px auto 0;
-  display:inline-block;
-  .logout {
-    float: right;
-    width: calc(700px - 128px);
-    padding: 64px;
-    background-color: #fff;
-    text-align: center;
-    .logout-btn {
-      height: 50px;
-      width: 320px;
-      background-color: #ea352d;
-      border: 1px solid #ea352d;
-      color: #fff;
-      margin: 0 auto;
+.wrapper {
+  background-color: #f5f5f5;
+  .content {
+    width: 1060px;
+    margin: 0 auto 40px;
+    padding-top: 40px;
+    @include clearfix();
+    .logout {
+      float: right;
+      width: calc(700px - 128px);
+      padding: 64px;
+      background-color: #fff;
+      text-align: center;
+      .logout-btn {
+        height: 50px;
+        width: 320px;
+        background-color: #ea352d;
+        border: 1px solid #ea352d;
+        color: #fff;
+        margin: 0 auto;
+      }
+    }
+    .side-bar-box {
+      float: left;
     }
   }
 }
