--- a/app/views/signup/signup3.html.haml
+++ b/app/views/signup/signup3.html.haml
@@ -41,12 +41,12 @@
       %h2 電話番号の確認
     .tell-box__body
       .push-box
-        =form_with model: @post, local: true do |f| 
+        =form_with model: @user, local: true do |f| 
           .formbox
             .form-group
               %label.tellNumber-new
                 携帯電話の番号
-              %input.tellNumber-info{placeholder: "携帯電話の番号を入力", value: ""}/
+              = f.text_field :phone_number, class: "tellNumber-info", placeholder: "携帯電話の番号を入力"
               %p 本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
             =link_to signup4_signup_index_path do
               =f.button "SMSを送信する", class: "go-ahead"
