--- a/app/views/signup/signup4.html.haml
+++ b/app/views/signup/signup4.html.haml
@@ -41,7 +41,7 @@
       %h2 住所入力
     .addless-box__body
       .push-box
-        =form_with model: @post, local: true do |f| 
+        =form_with model: @user, local: true do |f| 
           .formbox
             .form-group
               %label.kanjiName-new
@@ -49,22 +49,22 @@
               %span.must-content
                 必須
               .input-parrent
-                %input.kanji1stName-info{placeholder: "例) 山田", value: ""}
-                %input.kanji2ndName-info{placeholder: "例) 彩", value: ""}
+                = f.text_field :last_name_delivery, class: "kanji1stName-info", placeholder: "例) 山田"
+                = f.text_field :first_name_delivery, class: "kanji2ndName-info", placeholder: "例) 彩"
             .form-group
               %label.kanaName-new
                 お名前(全角) 
               %span.must-content
                 必須
               .input-parrent
-                %input.kana1stName-info{placeholder: "例) ヤマダ", value: ""}
-                %input.kana2ndName-info{placeholder: "例) アヤ", value: ""}
+                = f.text_field :last_name_kana_delivery, class: "kana1stName-info", placeholder: "例) ヤマダ"
+                = f.text_field :first_name_kana_delivery, class: "kana2ndName-info", placeholder: "例) アヤ"
             .form-group
               %label.yubinNum-new
                 郵便番号
               %span.must-content
                 必須
-              %input.yubinNum-info{placeholder: "例) 123-4567", value: ""}/
+              = f.text_field :postal_code, class: "yubinNum-info", placeholder: "例) 123-4567"
             .form-group
               %label.prefecture-new
                 都道府県
@@ -77,25 +77,25 @@
                 市町村
               %span.must-content
                 必須
-              %input.password-info{placeholder: "例) 横浜市緑区", value: ""}/
+              = f.text_field :city, class: "password-info", placeholder: "例) 横浜市緑区"
             .form-group
               %label.banchi-new
                 番地
               %span.must-content
                 必須
-              %input.password-info{placeholder: "例) 青山市1-1-1", value: ""}/
+              = f.text_field :address, class: "password-info", placeholder: "例) 青山市1-1-1"
             .form-group
               %label.billding-new
                 建物名
               %span.nini-content
                 任意
-              %input.password-info{placeholder: "例) 柳ビル103", value: ""}/
+              = f.text_field :building_name, class: "password-info", placeholder: "例) 柳ビル103"
             .form-group
               %label.tellNum-new
                 電話
               %span.nini-content
                 任意
-              %input.tellNum-info{placeholder: "09012345678", value: ""}/
+              = f.text_field :phone_number_delivery, class: "tellNum-info", placeholder: "09012345678"
             =link_to signup5_signup_index_path do
               =f.button "次へ進む", class: "go-ahead4"
   =render "devise/shared/footer-login"
