--- a/app/views/signup/signup5.html.haml
+++ b/app/views/signup/signup5.html.haml
@@ -41,14 +41,15 @@
       %h2 支払い方法
     .credit-box__body
       .push-box
-        =form_with model: @post, local: true do |f| 
+        =form_with model: @user, local: true do |f| 
           .formbox
             .form-group-credit
               %label.yubinNum-new
                 カード番号
               %span.must-content
                 必須
-              %input.yubinNum-info{placeholder: "半角数字のみ", value: ""}/
+              //クレジット番号のカラム名を商品購入実装の際に追加してください
+              = f.text_field class:"yubinNum-info", placeholder: "半角数字のみ"
               =image_tag "credit/iconfinder_visa-straight_38613.png"
               =image_tag "credit/iconfinder_mastercard-straight_38603.png"
               =image_tag "credit/iconfinder_american-express-straight_38591.png"
@@ -65,7 +66,7 @@
                 セキュリティコード
               %span.must-content
                 必須
-              %input.password-info{placeholder: "カード背面4桁もしくは3桁の番号", value: ""}/
+              = f.text_field class: "password-info", placeholder: "カード背面4桁もしくは3桁の番号"
             =link_to signup6_signup_index_path do
               =f.button "次へ進む", class: "go-ahead"
             =link_to "", class: "link-for-user-info" do
