--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -188,3 +188,4 @@
                   .contents-item__index--name 
                     %span テスト
 = render 'layouts/footer'
+= render "devise/shared/red-btn"
